# simple-tcp-based-protocol-design

./: CMakeLists.txt  README.md
inc/: client.hpp  protocol.hpp  server.hpp
src/: client.cpp  client_program.cpp  protocol.cpp  server.cpp  server_program.cpp
test/: test.cpp
